// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact.type === consignee 1`] = `
<div
  className="layout-row flex-100 layout-wrap margin_bottom margin_box_right"
>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content=""
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Shipper"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="contact_box flex-100 layout-wrap layout-row layout-align-start-stretch"
        >
          <div
            className="layout-row flex-100 layout-wrap"
          >
            <div
              className="info_row flex-100 layout-row"
            >
              <i
                className="icon fa fa-user flex-none layout-align-center-center"
                style={Object {}}
              />
              <h4>
                FIRST_NAME
                 
                LAST_NAME
              </h4>
            </div>
            <div
              className="info_row padding_bottom_contact flex-100 layout-row"
            >
              <i
                className="icon fa fa-building flex-none"
                style={Object {}}
              />
              <p>
                COMPANY_NAME
              </p>
            </div>
          </div>
          <div
            className="layout-row flex-100 layout-wrap"
          >
            <div
              className="info_row flex-100 layout-row"
            >
              <i
                className="icon fa fa-envelope flex-none"
                style={Object {}}
              />
              <p>
                EMAIL
              </p>
            </div>
            <div
              className="info_row flex-100 layout-row"
            >
              <i
                className="icon fa fa-phone flex-none"
                style={Object {}}
              />
              <p />
            </div>
          </div>
          <div
            className="info_row last_margin flex-100 layout-row layout-align-sm-center-center flex-sm-30"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <i
              className="icon fa fa-map flex-none"
              style={Object {}}
            />
            <p>
              FOO_STREET
              579
              <br />
              <strong>
                22456
                 
                FOO_CITY
              </strong>
               
              <br />
            </p>
          </div>
        </div>
      }
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Consignee"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="contact_box flex-100 layout-wrap layout-column"
        >
          <div
            className="layout-column layout-sm-row flex-sm-100"
          >
            <div
              className="layout-sm-column flex-sm-30"
            >
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-user flex-none layout-align-center-center"
                  style={Object {}}
                />
                <h4>
                  John
                   
                  Doe
                </h4>
              </div>
              <div
                className="info_row padding_bottom_contact flex-100 layout-row"
              >
                <i
                  className="icon fa fa-building flex-none"
                  style={Object {}}
                />
                <p>
                  FOO_COMPANY
                </p>
              </div>
            </div>
            <div
              className="layout-sm-column flex-sm-40"
            >
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-envelope flex-none"
                  style={Object {}}
                />
                <p>
                  foo@bar.baz
                </p>
              </div>
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-phone flex-none"
                  style={Object {}}
                />
                <p>
                  6345789
                </p>
              </div>
            </div>
          </div>
        </div>
      }
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Account Holder"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
</div>
`;

exports[`contact.type === notifee 1`] = `
<div
  className="layout-row flex-100 layout-wrap margin_bottom margin_box_right"
>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content=""
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Shipper"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content=""
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Consignee"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="contact_box flex-100 layout-wrap layout-column"
        >
          <div
            className="layout-column layout-sm-row flex-sm-100"
          >
            <div
              className="layout-sm-column flex-sm-30"
            >
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-user flex-none layout-align-center-center"
                  style={Object {}}
                />
                <h4>
                  John
                   
                  Doe
                </h4>
              </div>
              <div
                className="info_row padding_bottom_contact flex-100 layout-row"
              >
                <i
                  className="icon fa fa-building flex-none"
                  style={Object {}}
                />
                <p>
                  FOO_COMPANY
                </p>
              </div>
            </div>
            <div
              className="layout-sm-column flex-sm-40"
            >
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-envelope flex-none"
                  style={Object {}}
                />
                <p>
                  foo@bar.baz
                </p>
              </div>
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-phone flex-none"
                  style={Object {}}
                />
                <p>
                  6345789
                </p>
              </div>
            </div>
          </div>
        </div>
      }
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Account Holder"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
  <div
    className="flex-100 flex-gt-sm-20 layout-row layout-align-center margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        Array [
          <div
            className="contact_box notifyee_box flex-100 layout-wrap"
          >
            <div
              className="flex"
            >
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-user flex-none"
                  style={Object {}}
                />
                <h4>
                  FIRST_NAME
                   
                  LAST_NAME
                </h4>
              </div>
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-building flex-none"
                  style={Object {}}
                />
                <p>
                  COMPANY_NAME
                </p>
              </div>
            </div>
          </div>,
          <div
            className="flex-45 layout-row"
          />,
        ]
      }
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Notifyees"
      titleAction={false}
      wrapperClassName="layout-row flex-100 height_100 layout-align-start-start"
    />
  </div>
</div>
`;

exports[`contact.type === shipper 1`] = `
<div
  className="layout-row flex-100 layout-wrap margin_bottom margin_box_right"
>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="contact_box flex-100 layout-wrap layout-row layout-align-start-stretch"
        >
          <div
            className="layout-row flex-100 layout-wrap"
          >
            <div
              className="info_row flex-100 layout-row"
            >
              <i
                className="icon fa fa-user flex-none"
                style={Object {}}
              />
              <h4>
                FIRST_NAME
                 
                LAST_NAME
              </h4>
            </div>
            <div
              className="info_row padding_bottom_contact flex-100 layout-row"
            >
              <i
                className="icon fa fa-building flex-none"
                style={Object {}}
              />
              <p>
                COMPANY_NAME
              </p>
            </div>
          </div>
          <div
            className="layout-row flex-100 layout-wrap"
          >
            <div
              className="info_row flex-100 layout-row"
            >
              <i
                className="icon fa fa-envelope flex-none"
                style={Object {}}
              />
              <p>
                EMAIL
              </p>
            </div>
            <div
              className="info_row flex-100 layout-row"
            >
              <i
                className="icon fa fa-phone flex-none"
                style={Object {}}
              />
              <p />
            </div>
          </div>
          <div
            className="info_row last_margin flex-100 layout-row layout-align-sm-center-center flex-sm-30"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <i
              className="icon fa fa-map flex-none"
              style={Object {}}
            />
            <p>
              FOO_STREET
              579
               
              <br />
              <strong>
                22456
                 
                FOO_CITY
              </strong>
               
              <br />
            </p>
          </div>
        </div>
      }
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Shipper"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content=""
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Consignee"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="contact_box flex-100 layout-wrap layout-column"
        >
          <div
            className="layout-column layout-sm-row flex-sm-100"
          >
            <div
              className="layout-sm-column flex-sm-30"
            >
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-user flex-none layout-align-center-center"
                  style={Object {}}
                />
                <h4>
                  John
                   
                  Doe
                </h4>
              </div>
              <div
                className="info_row padding_bottom_contact flex-100 layout-row"
              >
                <i
                  className="icon fa fa-building flex-none"
                  style={Object {}}
                />
                <p>
                  FOO_COMPANY
                </p>
              </div>
            </div>
            <div
              className="layout-sm-column flex-sm-40"
            >
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-envelope flex-none"
                  style={Object {}}
                />
                <p>
                  foo@bar.baz
                </p>
              </div>
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-phone flex-none"
                  style={Object {}}
                />
                <p>
                  6345789
                </p>
              </div>
            </div>
          </div>
        </div>
      }
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Account Holder"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="layout-row flex-100 layout-wrap margin_bottom margin_box_right"
>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content=""
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Shipper"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content=""
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Consignee"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
  <div
    className="flex-100 flex-gt-sm-50 flex-25 layout-row layout-align-center card_padding_right margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="contact_box flex-100 layout-wrap layout-column"
        >
          <div
            className="layout-column layout-sm-row flex-sm-100"
          >
            <div
              className="layout-sm-column flex-sm-30"
            >
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-user flex-none layout-align-center-center"
                  style={Object {}}
                />
                <h4>
                  John
                   
                  Doe
                </h4>
              </div>
              <div
                className="info_row padding_bottom_contact flex-100 layout-row"
              >
                <i
                  className="icon fa fa-building flex-none"
                  style={Object {}}
                />
                <p>
                  FOO_COMPANY
                </p>
              </div>
            </div>
            <div
              className="layout-sm-column flex-sm-40"
            >
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-envelope flex-none"
                  style={Object {}}
                />
                <p>
                  foo@bar.baz
                </p>
              </div>
              <div
                className="info_row flex-100 layout-row"
              >
                <i
                  className="icon fa fa-phone flex-none"
                  style={Object {}}
                />
                <p>
                  6345789
                </p>
              </div>
            </div>
          </div>
        </div>
      }
      contentClassName="layout-row layout-wrap flex-100"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      showTitle={true}
      style={Object {}}
      title="Account Holder"
      titleAction={false}
      wrapperClassName="layout-row flex-100 layout-align-start-start"
    />
  </div>
</div>
`;
